--- a/app/assets/fonts/icomoon/style.css
+++ b/app/assets/fonts/icomoon/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('icomoon.eot?i5trg1');
+    src:    url('icomoon/icomoon.eot?i5trg1');
     src:    url('icomoon.eot?i5trg1#iefix') format('embedded-opentype'),
         url('icomoon.ttf?i5trg1') format('truetype'),
         url('icomoon.woff?i5trg1') format('woff'),
