--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       
       <div class="col-md-6 text-center nav-item">
         <ul class="list-inline list-styled header-list">
-          <li><a href="">Apps</a></li>
+          <li><a href="<%= root_path %>">Apps</a></li>
           <li>
             <%= link_to  search_advanced_path do %>
               Advanced Search
