--- a/app/views/search/by_product.html.erb
+++ b/app/views/search/by_product.html.erb
@@ -8,9 +8,9 @@
             <div class="col-lg-12">        
                     <small>...</small>       
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Search</a>
+                    <li><a href="<%= root_path %>">home</a>
                     </li>
-                    <li class="active">By Products</li>
+                    <li class="active">Advanced</li>
                 </ol>
             </div>
         </div>
