--- a/app/assets/stylesheets/toolkit.css
+++ b/app/assets/stylesheets/toolkit.css
@@ -7914,9 +7914,9 @@ button.close {
   content: ""; }
 
 @font-face {
-  font-family: 'icomoon';
-  src: url("icomoon.eot?i5trg1");
-  src: url("icomoon.eot?i5trg1#iefix") format("embedded-opentype"), url("icomoon.ttf?i5trg1") format("truetype"), url("icomoon.woff?i5trg1") format("woff"), url("icomoon.svg?i5trg1#icomoon") format("svg");
+  font-family: 'icomoon/fonts/icomoon';
+  src: url("icomoon/fonts/icomoon.eot?i5trg1");
+  src: url("icomoon/fonts/icomoon.eot?i5trg1#iefix") format("embedded-opentype"), url("icomoon/fonts/icomoon.ttf?i5trg1") format("truetype"), url("icomoon/fonts/icomoon.woff?i5trg1") format("woff"), url("icomoon/fonts/icomoon.svg?i5trg1#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -9960,6 +9960,7 @@ footer {
 
 .single-hero {
   background-image: url("hero-wallpaper.png");
+  opacity: 0.9;
   background-size: cover;
   position: relative;
   height: 700px; }
