--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -30,9 +30,9 @@
                     <div class="col-xs-4">
                         <div class="thumbnail">
                         <% if business.logo.blank? %>
-                          <%= image_tag "nologo.png", width: "80%", height: "90px"%>
+                          <%= image_tag "nologo.png",  height: "90px"%>
                         <% else %>
-                          <%= image_tag business.logo_url, width: "80%", height: "90px"%>
+                          <%= image_tag business.logo_url, height: "90px"%>
                         <% end %>
                         <div class="caption">
                           <h4><%= link_to business.name, business_path(business) %></h4>
