--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,7 +1,12 @@
 <div class="single-hero">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 single-hero-title"><h2><%= @business.name %></h2></div>
+            <div class="col-xs-6 single-hero-title"><br><br><br><br>
+                <h2><%= @business.name %></h2>
+                <% unless @business.logo %>
+                <%= image_tag "food2.png", width: "40%", class: "img-circle", style: "padding-left: 00px;"%>
+                <% end %>
+            </div>
         </div>
     </div>
 </div>
@@ -11,7 +16,7 @@
             
             <div class="col-md-12">
                 <ul class="list-inline filter-ul">
-                    <li><h5 class="roboto"><a href="#">Business</a></h5></li>
+                    <li><h5 class="roboto"><a href="<%= businesses_path %>">Businesses</a></h5></li>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                     <li><h5 class="roboto"><a href="#"><%= @business.name %></a></h5></li>
                 </ul>
@@ -50,7 +55,7 @@
                 <div class="col-xs-3">
                     <ul class="single-details-ul">            
                         <li><h6>Email</h6></li>  
-                        <li><p><i class="fa fa-phone" aria-hidden="true"></i> <%= @business.email %></p></li>
+                        <li><p><i class="fa fa-envelope-o"></i></i> <%= @business.email %></p></li>
                         <li>
                             <% unless @business.facebook.blank? %>
                                 <a href="<%= @business.facebook %>"><i class="fa fa-facebook-official fa-3x"></i></a>
@@ -65,8 +70,7 @@
                                 <a href="<%= @business.google %>"><i class="fa fa-google-plus-square fa-3x"></i></a>
                             <% end %>
                         </li>
-                    </ul>
-                      
+                    </ul>                     
 
                 </div>
 
@@ -142,7 +146,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-7 vert-offset-top-5">
-                    <h6 class="strong">Comments<span class="bs-caret"><span class="caret"></span></span></h6>
+                    <h6 class="strong"><%= pluralize(@business.comments.size, 'comment') %><span class="bs-caret"><span class="caret"></span></span></h6>
                     <div id='com'>
                         <%= render @business.comments %>
                     </div>
@@ -155,16 +159,10 @@
                     </div>
                     <% end %>
                     <div class="users vert-offset-top-4 vert-offset-bottom-8">
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                        <a href=""><img src="http://placehold.it/30x30" alt=""></a>
-                    </div>
-                    <h6 class="strong vert-offset-top-4 user-names">Users: <span><a href="#">Yulia Petrova</a></span>,<span><a href="#"> Alexey Prova </a></span>,<span><a href="#"> Nikita Sova</a></span></h6>
+                        
+                     </div>
+
+               
                 </div>
             </div>
         </div>
