--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,10 +1,4 @@
-<html>
-    <head>
-        <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    </head>
-    <body>
+
         
         <br><br>
         <div class="container">
@@ -30,6 +24,7 @@
                     <div class="tab-pane fade active in" id="service-one">
                         <div class="panel panel-default alert alert-warning alert-dismissible">
                           <div class="panel-body">
+                          <% unless @user_creator.empty? %>
                                 <% @user_creator.each do |comment| %>
                                 <h3 style="color:#3366ff"><%= link_to Business.find(comment.business_id).name, business_path(comment.business_id) %></h3>
                                 <h5><% Business.find(comment.business_id).addresses.each do |address|%></h5>
@@ -39,6 +34,13 @@
                                      <%= comment.content %></p>
                                 <hr>
                                 <% end %>
+                            <% else %>
+                            <div class="alert alert-danger" role="alert">
+                              <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                              <span class="sr-only">Error:</span>
+                              You did not another comment for businesses
+                            </div>
+                            <% end %>
                           </div>
                           <div class="row text-center">
                                 <div class="col-lg-12">
@@ -55,6 +57,7 @@
                     <div class="tab-pane fade" id="service-two">
                         <div class="panel panel-default alert alert-warning alert-dismissible">
                           <div class="panel-body">
+                          <% unless @user_ratings %>
                             <% @user_ratings.each do |rate| %>
                                 <h3 style="color:#3366ff"><%= link_to Business.find(rate.business_id).name, business_path(Business.find(rate.business_id)) %></h3>
                                 <h5><% Business.find(rate.business_id).addresses.each do |address| %>
@@ -76,6 +79,13 @@
 
                                 <hr>
                             <% end %>
+                          <% else %>
+                            <div class="alert alert-danger" role="alert">
+                              <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                              <span class="sr-only">Error:</span>
+                              You did not another rate for businesses
+                            </div>
+                          <% end %>
                           </div>
                           <div class="row text-center">
                                 <div class="col-lg-12">
@@ -96,5 +106,4 @@
             <!-- ROW END -->
         </section>
         <!-- SECTION END -->
-    </body>
-</html>
+        </div>
