--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -21,22 +21,30 @@
 			
 		<div class="col-md-6">
 			<ul class="list-inline filter-ul" >
-	        	<li><span class="label filter-labels">White <i class="fa fa-times" aria-hidden="true"></i></span></li>
+			  <% if params[:query].present? %>
+	        	<li><span class="label filter-labels"><%= params[:query] %> <i class="fa fa-search" aria-hidden="true"></i></span></li>
+	          <% end %>
+	          <% if params[:product].present? %>
+	        	<li><span class="label filter-labels"><%= params[:product] %> <i class="fa fa-search" aria-hidden="true"></i></span></li>
+	          <% end %>
+			  <% if params[:category].present? %>
+	        	<li><span class="label filter-labels"><%= params[:category] %> <i class="fa fa-cutlery" aria-hidden="true"></i></span></li>
+	          <% end %>
+	          <% if params[:city].present? && params[:city] != "0" %>
+	        	<li><span class="label filter-labels"><%= City.find(params[:city]).name || City.find("params[:city]").name %> <i class="fa fa-globe" aria-hidden="true"></i>
+				</i></span></li>
+	          <% end %>
+	          <% if params[:open].present? %>
+	        	<li><span class="label filter-labels">open <i class="fa fa-key" aria-hidden="true"></i></span></li>
+	          <% end %>
+	          <% if params[:rate_min].present? %>
+	        	<li><span class="label filter-labels"><%= params[:rate_min] %> - <%= params[:rate_max] %> <i class="fa fa-star" aria-hidden="true"></i></i></span></li>
+	          <% end %>
 	        </ul>
 
 			</div>
 			<div class="col-md-6 text-right">
 				<span class="h6 strong">Sort By</span>
-				<select class="selectpicker" title="Price">
-				  <option>Mustard</option>
-				  <option>Ketchup</option>
-				  <option>Relish</option>
-				</select>
-				<select class="selectpicker" title="Brand">
-				  <option>Mustard</option>
-				  <option>Ketchup</option>
-				  <option>Relish</option>
-				</select>
 				<select class="selectpicker" title="Type">
 				  <option>Mustard</option>
 				  <option>Ketchup</option>
@@ -51,7 +59,7 @@
 <section class="filter">
 	<div class="container">
 
-    <%= form_tag("/search/filter", method: "get", businesses: @businesses) do %>
+    <%= form_tag("/search/filter", method: "get") do %>
 			<div class="row vert-offset-top-6">
 				<div class="col-xs-4">
 					<div class="filter-aside">
@@ -64,18 +72,24 @@
 							<h6 class="strong">Category</h6>
 							<ul class="list-inline brand-ul">
 	              				<% @categories= Category.all.map(&:name) %>
-								<%= select_tag :category, options_for_select(@categories), include_blank: "Select Category",class: "form-control" %>
+	              					<% if @businesses == nil %>
+	              						<%= select_tag :category, options_for_select(@categories), include_blank: "Select Category", :required => true ,class: "form-control", require: true %>
+
+	              					<% else %>
+	              						<%= select_tag :category, options_for_select(@categories), include_blank: "Select Category" ,class: "form-control", require: true %>
+
+	              					<% end %>
 							</ul>
 							<h6 class="strong">City</h6>
 							<ul class="list-inline brand-ul">
 	              				<% @cities = City.all %>
-								<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name"), include_blank: "Select city", require: true, class: "form-control" %>
+								<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name"), include_blank: "Select city", class: "form-control" %>
 							
 							</ul>
 							<ul class="list-inline brand-ul">
               					<%= check_box_tag(:open, class: "form-control") %>
 								<%= label_tag(:open, "Open") %>								
-								<%= hidden_field_tag :businesses, @businesses.map(&:id) %>
+								<%= hidden_field_tag :businesses, @businesses.map(&:id) if @businesses != nil%>
 							</ul>		
 						</div>
 						<div class="padding-20 border-bottom">
@@ -124,7 +138,7 @@
 					    <% if business.logo.blank? %>
 								<%= image_tag "nologo.png", height: "90px"%>
 							<% else %>
-								<%= image_tag business.logo_url, height: "90px"%>
+								<%= image_tag business.logo_url, height: "100px;"%>
 							<% end %>
 					    <div class="caption">
 					      <h4><%= link_to business.name, business_path(business) %></h4>
