--- a/app/views/suggest_edits/index.html.erb
+++ b/app/views/suggest_edits/index.html.erb
@@ -1,5 +1,5 @@
 
-<br><br><br><br>
+<br><br>
 <div class="div-center">
   
   <h4> Update business information </h4><br>
@@ -39,13 +39,18 @@
     <%= f.input :facebook, input_html: { value: @business_suggest_edit.facebook, placeholder: "url www.facebook.com" }, :class => 'form-control no-border' %>
     <%= f.input :instagram, input_html: { value: @business_suggest_edit.instagram, placeholder: "url www.instagram.com" }, :class => 'form-control no-border' %>
     <%= f.input :google, input_html: { value: @business_suggest_edit.google,  placeholder: "your gmail " } , :class => 'form-control no-border' %>
+    </div>
+      <div class="pull-right">
+    <%= link_to "cancel", business_path(@business_suggest_edit), html_options: { class: "btn" } %>
+    <%= button_tag 'Submit', type: :submit, class: 'btn btn-primary' %>
+    <%# f.button :button, "Submit" %>
+  
     
   </div>
   <hr>
-  <div class="pull-right">
-    <%= link_to "cancel", business_path(@business_suggest_edit.id), class: "btn-default" %>
-    <%= f.button :button, "Submit", class: "btn-primary" %>
-  </div>
+
   <%end%>
 </div>
+<br><br>
+
 <%= javascript_include_tag "dependent_fields" %>
