--- a/app/views/suggest_photos/_new.html.erb
+++ b/app/views/suggest_photos/_new.html.erb
@@ -15,6 +15,7 @@
         </div>
         </div><br><br>
         <div class="modal-footer">
-            <%= f.button :submit, "Send", class: "btn-primary" %>
+            <%# f.button :submit, "Send", class: "btn-primary" %>
+            <%= button_tag 'Send', type: :submit, class: 'btn btn-primary' %>
         </div>
     <% end %>
