--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -43,15 +43,16 @@
 	        </ul>
 
 			</div>
-			<div class="col-md-6 text-right">
+		<!-- 	<div class="col-md-6 text-right">
 				<span class="h6 strong">Sort By</span>
 				<select class="selectpicker" title="Type">
-				  <option>Mustard</option>
-				  <option>Ketchup</option>
+				  <option>Name</option>
+				  <option>Overate</option>
 				  <option>Relish</option>
 				</select>
-			</div>
-
+                <button class="btn btn-primary">Sort</button>
+			</div> -->
+            
 		</div>
 	</div>
 </div>
