filter only search business and sort businesses (name, rate)

--- a/app/views/search/by_product.html.erb
+++ b/app/views/search/by_product.html.erb
@@ -10,7 +10,7 @@
                 <ol class="breadcrumb">
                     <li><a href="<%= root_path %>">home</a>
                     </li>
-                    <li class="active">Advanced</li>
+                    <li class="active">By products</li>
                 </ol>
             </div>
         </div>
@@ -84,6 +84,7 @@
 
     </div>
     <!-- /.container -->
+    </div>
 
 
 
