--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,7 @@
 
 /*@import "paginate.css";*/
 @import "toolkit.css";
-@import "bootstrap"
+@import "bootstrap";
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
